--- a/tutorials/cellanova_integration.ipynb
+++ b/tutorials/cellanova_integration.ipynb
@@ -554,7 +554,7 @@
     "- `adata` : Preprocessed anndata object. This object should be the output of the function `cnova.model.preprocess_data`.\n",
     "- `integrate_key` : str. Variable name indicating the smallest batch unit/sample, which will be used for integration. Should be a column name of adata.obs.\n",
     "- `dim_ME` (optional) : int, dimension of main effects. Defualt is 70.\n",
-    "- `n_pcs` (optional) : int, number of principle components used in harmony integration. Defualt is 70.\n",
+    "- `k_harmony` (optional) : int, number of principle components used in harmony integration. Defualt is 70.\n",
     "\n",
     "The output is anndata object, in which we stored the following main information:\n",
     "- `adata.obsm['Cmat']` : np.array, the estimated cell embedding. \n",
